Close button fix

--- a/works.html
+++ b/works.html
@@ -54,7 +54,7 @@
             <div class="pt-table">
                 <div class="pt-tablecell page-works relative">
                     <!-- .close -->
-                    <a href="./" class="page-close"><i class="tf-ion-close">    </i></a>
+                    <a href="./index.html" class="page-close"><i class="tf-ion-close">    </i></a>
                     <!-- /.close -->
 
                     <div class="container">
@@ -96,7 +96,7 @@
                                     <div class="overlay"></div>
                                     <figcaption class="works-inner">
                                         <h4>Project Name</h4>
-                                        <p>Illustration, Digital Art</p>
+                                        <p>Digital Watch</p>
                                     </figcaption>
                                 </figure>
                             </div>
