--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
             <div class="pt-table">
                 <div class="pt-tablecell page-contact relative">
                     <!-- .close -->
-                    <a href="./" class="page-close"><i class="tf-ion-close"></i></a>
+                    <a href="./index.html" class="page-close"><i class="tf-ion-close"></i></a>
                     <!-- /.close -->
 
                     <div class="container">
