--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
             <div class="pt-table">
                 <div class="pt-tablecell page-resume relative">
                     <!-- .close -->
-                    <a href="./" class="page-close"><i class="tf-ion-close"></i></a>
+                    <a href="./index.html" class="page-close"><i class="tf-ion-close"></i></a>
                     <!-- /.close -->
 
                     <div class="container">
