update welcome page

--- a/welcome.html
+++ b/welcome.html
@@ -65,9 +65,9 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-6 col-lg-7">
                                 <div class="page-title">
-                                    <h2>David <span class="primary">ramon</span> <span class="title-bg">About</span></h2>
-                                    <p>A product designer from England, who focuses on interactive design & A freelance designer focusing on typography & clean interfaces. Also works in Google..</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores repellendus corporis, tenetur inventore perferendis reprehenderit autem dignissimos non quos unde eveniet sapiente necessitatibus consequuntur ea ab dolore, minus nam eaque.</p>
+                                    <h2>Moleseng <span class="primary">Mokgosi</span> <span class="title-bg">About</span></h2>
+                                    <p>Software Developer and Economics Sciences graduate with experience in building apps from the ground up, fluent in the Javascript and Java programming languages. Very passionate about learning different technologies and looking to use that knowledge in a frontend developer position to help businesses build software solutions to improve business processes and give users the best experience while interacting with those solutions. </p>
+
                                 </div>
                             </div>
                         </div> <!-- /.row -->
