fix projects page

--- a/works.html
+++ b/works.html
@@ -67,7 +67,7 @@
                             </div>                            
                         </div> <!-- /.row -->
 
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-xs-12">
                                 <ul class="filter list-inline">
                                     <li><a href="#" class="active" data-filter="*">All</a></li>
@@ -77,60 +77,34 @@
                                     <li><a href="#" data-filter=".Artworks">Artworks</a></li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="row isotope-gutter">
-                            <div class="col-xs-12 col-sm-6 col-md-4 Photoshop Illustrator">
-                                <figure class="works-item">
-                                    <img src="img/works/1.jpg" alt="">
-                                    <div class="overlay"></div>
-                                    <figcaption class="works-inner">
-                                        <h4>Project Name</h4>
-                                        <p>Illustration, Digital Art</p>
-                                    </figcaption>
-                                </figure>
-                            </div>
                             <div class="col-xs-12 col-sm-6 col-md-4 Illustrator">
+                                <a href="https://salon-app-eosin.vercel.app/" target="_blank" >
                                 <figure class="works-item">
-                                    <img src="img/works/2.jpg" alt="">
+                                    <img src="img/works/salonwebsite.png" alt="">
                                     <div class="overlay"></div>
                                     <figcaption class="works-inner">
-                                        <h4>Project Name</h4>
-                                        <p>Digital Watch</p>
+                                        <h4>Salon Booking System</h4>
+                                        <p>Make booking appointments a good user experience.</p>
                                     </figcaption>
                                 </figure>
+                                </a>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-4 Indesign Photoshop">
-                                <figure class="works-item">
-                                    <img src="img/works/3.jpg" alt="">
-                                    <div class="overlay"></div>
-                                    <figcaption class="works-inner">
-                                        <h4>Project Name</h4>
-                                        <p>Illustration, Digital Art</p>
-                                    </figcaption>
-                                </figure>
+                                <a href="https://book-worm-five.vercel.app/" target="_blank">
+                                    <figure class="works-item">
+                                        <img src="img/works/personallibrary.png" alt="">
+                                        <div class="overlay"></div>
+                                        <figcaption class="works-inner">
+                                            <h4>Personal Library Management System</h4>
+                                            <p>Manage your personal library collection.</p>
+                                        </figcaption>
+                                    </figure>
+                                </a>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4 Artworks Illustrator">
-                                <figure class="works-item">
-                                    <img src="img/works/4.jpg" alt="">
-                                    <div class="overlay"></div>
-                                    <figcaption class="works-inner">
-                                        <h4>Project Name</h4>
-                                        <p>Illustration, Digital Art</p>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4 Photoshop">
-                                <figure class="works-item">
-                                    <img src="img/works/5.jpg" alt="">
-                                    <div class="overlay"></div>
-                                    <figcaption class="works-inner">
-                                        <h4>Project Name</h4>
-                                        <p>Illustration, Digital Art</p>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                        </div> <!-- /.row -->
+                        </div> <!--/.row -->
                     </div> <!-- /.container -->
 
                     <nav class="page-nav clear">
