updaet contact form

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title text-center">
                                     <h2>Get in  <span class="primary">touch</span> <span class="title-bg">Contact</span></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                                    <p>I would to hear from you!</p>
                                 </div>
                             </div>                            
                         </div> <!-- /.row -->
@@ -75,7 +75,7 @@
                                         </div>
                                         <div class="media-body">
                                             <h4>Email</h4>
-                                            <p><a href="mailto:my_name@gmail.com">my_name@gmail.com</a></p>
+                                            <p><a href="mailto:my_name@gmail.com">mmokgosi9@gmail.com</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -87,7 +87,7 @@
                                         </div>
                                         <div class="media-body">
                                             <h4>Phone</h4>
-                                            <p><a href="tel:+000-1111-2222">+000-1111-2222</a></p>
+                                            <p><a href="tel:(+27) 65 719 0473">(+27) 65 719 0473</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -98,8 +98,8 @@
                                             <i class="tf-mobile"></i>
                                         </div>
                                         <div class="media-body">
-                                            <h4>Skype</h4>
-                                            <p><a href="skype:my_name">my_name</a></p>
+                                            <h4>LinkedIn</h4>
+                                            <p><a href="https://www.linkedin.com/in/molesengmokgosi/">Moleseng Mokgosi</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -108,20 +108,20 @@
                                 <ul class="contact-social">
                                     <li>
                                         <span class="contact-social-hex"></span>
-                                        <a href="www.fb.com/themefisher"><i class="tf-ion-social-facebook"></i></a>
+                                        <a href="https://github.com/keMoleseng" target="_blank"><i class="tf-ion-social-github"></i></a>
                                     </li>
                                     <li>
                                         <span class="contact-social-hex"></span>
-                                        <a href="www.twitter.com/themefisher"><i class="tf-ion-social-twitter"></i></a>
+                                        <a href="https://twitter.com/mueslimomo" target="_blank"><i class="tf-ion-social-twitter"></i></a>
                                     </li>
                                     <li>
                                         <span class="contact-social-hex"></span>
-                                        <a href="#"><i class="tf-ion-social-google"></i></a>
+                                        <a href="https://www.linkedin.com/in/molesengmokgosi/" target="_blank"><i class="tf-ion-social-linkedin"></i></a>
                                     </li>
-                                    <li>
+                                    <!-- <li>
                                         <span class="contact-social-hex"></span>
                                         <a href="www.dribbble.com/themefisher"><i class="tf-ion-social-dribbble"></i></a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                             <div class="col-xs-12 col-sm-7 col-md-7 col-md-offset-1 col-lg-offset-2">
