--- a/resume.html
+++ b/resume.html
@@ -81,8 +81,10 @@
                                                 <i class="tf-documents5"></i>
                                             </div>
                                             <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
+                                                <h5>Wits University</h5>
+                                                <span>2017 - 2021</span>
+                                                <span>BCom., General. </span>
+                                                <p>Economic Sciences and Insurance and Risk Management.</p>
                                             </div>
                                         </div>
                                         <!-- /.history-item -->
@@ -92,9 +94,9 @@
                                                 <i class="tf-documents5"></i>
                                             </div>
                                             <div class="history-text">
-                                                <h5>Merin Land College</h5>
+                                                <h5>Cultura High School</h5>
                                                 <span>2012 - 2014</span>
-                                                <p>Claritas est etiam processus dynamicus, qui <br> sequitur mutationem consuetudium lectorum.</p>
+                                                
                                             </div>
                                         </div>
                                         <!-- /.history-item -->
