--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title home text-center">
                                     <img src="img/phantom.png" alt="">
-                                    <p>A product designer from England, who focuses on interactive design &amp; A freelance designer focusing on typography &amp; clean interfaces. Also works in Google.</p>
+                                    <p>Passionate software developer from South Africa.</p>
                                 </div>
 
-                                <div class="hexagon-menu clear">
+                                <div class="hexagon-menu clear justify-content-center">
                                     <div class="hexagon-item">
                                         <div class="hex-item">
                                             <div></div>
@@ -190,15 +190,6 @@
                                             </span>
                                             <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                         </a>
-                                       <!-- <a href="testimonials.html" class="hex-content">
-                                            <span class="hex-content-inner">
-                                                <span class="icon">
-                                                    <i class="tf-chat"></i>
-                                                </span>
-                                                <span class="title">Testimonials</span>
-                                            </span>
-                                            <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
-                                        </a> -->
                                     </div>
                                     <div class="hexagon-item">
                                         <!-- <div class="hex-item">
