--- a/resume.html
+++ b/resume.html
@@ -61,17 +61,17 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title text-center">
-                                    <h2>My <span class="primary">history</span> <span class="title-bg">Resume</span></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                                    <h2>My <span class="primary">writing</span> <span class="title-bg">articles</span></h2>
+                                    <p>I like to document my learning journey by writing articles about things I have learned along the way.</p>
                                 </div>
                             </div>
                         </div> <!-- /.row -->
 
                         <div class="row">
-                            <div class="col-xs-12 col-sm-6">
+                            <div class="col-xs-12 col-sm-12">
                                 <div class="history-block">
                                     <div class="section-title light clear">
-                                        <h3>Education</h3>
+                                        <h3>Articles</h3>
                                     </div>
                                     <!-- /.section-title -->
                                     <div class="history-scroller">
@@ -81,10 +81,9 @@
                                                 <i class="tf-documents5"></i>
                                             </div>
                                             <div class="history-text">
-                                                <h5>Wits University</h5>
-                                                <span>2017 - 2021</span>
-                                                <span>BCom., General. </span>
-                                                <p>Economic Sciences and Insurance and Risk Management.</p>
+                                                <a href="https://medium.com/better-programming/using-react-router-for-modularization-872b32315a3b" ><h5>Using React Router for Moduralisation</h5></a>
+                                                <span>30 August 2022</span>
+                                                <span>BetterProgramming</span>
                                             </div>
                                         </div>
                                         <!-- /.history-item -->
@@ -94,114 +93,19 @@
                                                 <i class="tf-documents5"></i>
                                             </div>
                                             <div class="history-text">
-                                                <h5>Cultura High School</h5>
-                                                <span>2012 - 2014</span>
+                                                <a href="https://betterprogramming.pub/migrating-a-complete-creat-react-app-to-nextjs-ba6edd8e64f1"><h5>Migrating a Create-React-App to NextJS</h5></a>
+                                                <span>6 July 2022</span>
+                                                <span>BetterProgramming</span>
                                                 
                                             </div>
                                         </div>
                                         <!-- /.history-item -->
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                            </div>
-                                        </div>
+                                       
                                         <!-- /.history-item -->
                                     </div>
                                 </div> <!-- /.history-block -->
                             </div> <!-- /.col -->
-                            <div class="col-xs-12 col-sm-6">
-                                <div class="history-block">
-                                    <div class="section-title light clear">
-                                        <h3>Experiences</h3>
-                                    </div>
-                                    <!-- /.section-title -->
-                                    <div class="history-scroller">
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                                <p>Claritas est etiam processus dynamicus, qui <br> sequitur mutationem consuetudium lectorum.</p>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
-                                        <div class="history-item">
-                                            <div class="history-icon">
-                                                <span class="history-hex"></span>
-                                                <i class="tf-documents5"></i>
-                                            </div>
-                                            <div class="history-text">
-                                                <h5>Merin Land College</h5>
-                                                <span>2012 - 2014</span>
-                                            </div>
-                                        </div>
-                                        <!-- /.history-item -->
-                                    </div>
-                                </div> <!-- /.history-block -->
-                            </div> <!-- /.col -->
+
                         </div> <!-- /.row -->
                     </div> <!-- /.container -->
 
