--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title text-center">
-                                    <h2>About <span class="primary">me</span> <span class="title-bg">Name</span></h2>
+                                    <h2>About <span class="primary">me</span> <span class="title-bg">About</span></h2>
                                     <p>                                    <p>Software Developer from South Africa. I focus on creating beautiful user interfaces to improve user experience. I love building beautiful and functional websites and web applications.</p></p>
                                 </div>
                             </div>
@@ -70,10 +70,8 @@
                                 <div class="about-author">
                                     
                                     <div class="author-desc">
-                                        <p><b>Date of birth:</b>September 17</p>
+                                        <p><b>Technologies:</b>ReactJS, NextJS, TypeScript, NodeJS, JAVA</p>
                                         <p><b>Language:</b> English, Setswana</p>
-                                        <p><b>Expert in:</b> UI/UX, Web development</p>
-                                        <p><b>Freelance:</b> Available</p>
                                     </div>
                                     <!-- /.author-desc -->
                                 </div> <!-- /.about-author -->
@@ -120,13 +118,7 @@
                                         </div>
                                         <div class="skill-lavel" data-skill-value="70%"></div>
                                     </div> <!-- /.progress -->
-                                    <div class="progress clear">
-                                        <div class="skill-name">VSCODE</div>
-                                        <div class="skill-bar">
-                                            <div class="bar"></div>
-                                        </div>
-                                        <div class="skill-lavel" data-skill-value="75%"></div>
-                                    </div> <!-- /.progress -->
+                                    <!-- /.progress -->
                                 </div> <!-- /.skill-wrapper -->
                             </div> <!-- /.col -->
                         </div> <!-- /.row -->
