--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
 
         <main class="site-wrapper">
             <div class="pt-table">
-                <div class="pt-tablecell page-home relative" style="background-image: url('img/banner.jpg');">
+                <div class="pt-tablecell page-home relative" style="background-image: url('img/banner2.jpg');">
                     <div class="overlay"></div>
 
                     <div class="container">
                         <div class="row">
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title home text-center">
-                                    <img src="img/phantom.png" alt="">
-                                    <p>Passionate software developer from South Africa.</p>
+                                    <img src="img/Moleseng.png" alt="">
+                                    <p>Software designer from Bronkhorstspruit, South AFrica.</p>
                                 </div>
 
-                                <div class="hexagon-menu clear justify-content-center">
+                                <div class="hexagon-menu clear">
                                     <div class="hexagon-item">
                                         <div class="hex-item">
                                             <div></div>
@@ -107,6 +107,27 @@
                                         </a>
                                     </div>
                                     <div class="hexagon-item">
+                                          <div class="hex-item">
+                                            <div></div>
+                                            <div></div>
+                                            <div></div>
+                                        </div>
+                                        <div class="hex-item">
+                                            <div></div>
+                                            <div></div>
+                                            <div></div>
+                                        </div>
+                                        <a href="works.html" class="hex-content">
+                                            <span class="hex-content-inner">
+                                                <span class="icon">
+                                                    <i class="tf-briefcase2"></i>
+                                                </span>
+                                                <span class="title">Projects</span>
+                                            </span>
+                                            <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
+                                        </a>
+                                    </div>
+                                    <div class="hexagon-item">
                                         <div class="hex-item">
                                             <div></div>
                                             <div></div>
@@ -122,14 +143,13 @@
                                                 <span class="icon">
                                                     <i class="tf-tools"></i>
                                                 </span>
-                                                <span class="title">Resume</span>
+                                                <span class="title">Articles</span>
                                             </span>
                                             <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                         </a>
-                                           
                                     </div>
                                     <div class="hexagon-item">
-                                        <!-- <div class="hex-item">
+                                      <!-- <div class="hex-item">
                                             <div></div>
                                             <div></div>
                                             <div></div>
@@ -143,35 +163,35 @@
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="tf-tools-2"></i>
-                                                </span>                                       
-                                                <span class="title">Services</span>
-                                            </span>
-                                            <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
-                                        </a>  - -->
-                                    </div>
-                                    <div class="hexagon-item">
-                                        <div class="hex-item">
-                                            <div></div>
-                                            <div></div>
-                                            <div></div>
-                                        </div>
-                                        <div class="hex-item">
-                                            <div></div>
-                                            <div></div>
-                                            <div></div>
-                                        </div>
-                                        <a href="works.html" class="hex-content">
-                                            <span class="hex-content-inner">
-                                                <span class="icon">
-                                                    <i class="tf-briefcase2"></i>
                                                 </span>
-                                                <span class="title">Projectss</span>
+                                                <span class="title">Projects</span>
                                             </span>
                                             <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
-                                        </a>
+                                        </a>     -->
                                     </div>
                                     <div class="hexagon-item">
-                                        <div class="hex-item">
+                                          <div class="hex-item">
+                                              <div></div>
+                                              <div></div>
+                                              <div></div>
+                                          </div>
+                                          <div class="hex-item">
+                                              <div></div>
+                                              <div></div>
+                                              <div></div>
+                                          </div>
+                                          <a href="contact.html" class="hex-content">
+                                              <span class="hex-content-inner">
+                                                  <span class="icon">
+                                                      <i class="tf-envelope2"></i>
+                                                  </span>
+                                                  <span class="title">Contact</span>
+                                              </span>
+                                              <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
+                                          </a>
+                                      </div>
+                                    <div class="hexagon-item">
+                                      <!--  <div class="hex-item">
                                             <div></div>
                                             <div></div>
                                             <div></div>
@@ -189,37 +209,7 @@
                                                 <span class="title">Contact</span>
                                             </span>
                                             <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
-                                        </a>
-                                    </div>
-                                    <div class="hexagon-item">
-                                        <!-- <div class="hex-item">
-                                            <div></div>
-                                            <div></div>
-                                            <div></div>
-                                        </div>
-                                        <div class="hex-item">
-                                            <div></div>
-                                            <div></div>
-                                            <div></div>
-                                        </div> -->
-                                        <!-- <a href="testimonials.html" class="hex-content">
-                                            <span class="hex-content-inner">
-                                                <span class="icon">
-                                                    <i class="tf-chat"></i>
-                                                </span>
-                                                <span class="title">Testimonials</span>
-                                            </span>
-                                            <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
-                                        </a> -->
-                                        <!-- <a href="contact.html" class="hex-content">
-                                            <span class="hex-content-inner">
-                                                <span class="icon">
-                                                    <i class="tf-envelope2"></i>
-                                                </span>
-                                                <span class="title">Contact</span>
-                                            </span>
-                                            <svg viewbox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
-                                        </a> -->
+                                        </a>-->
                                     </div>
                                 </div> <!-- /.hexagon-menu -->
 
