--- a/works.html
+++ b/works.html
@@ -61,8 +61,8 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title text-center">
-                                    <h2>My <span class="primary">works</span> <span class="title-bg">works</span></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                                    <h2>My <span class="primary">work</span> <span class="title-bg">work</span></h2>
+                                    <p>Some things I have built.</p>
                                 </div>
                             </div>                            
                         </div> <!-- /.row -->
