--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title text-center">
                                     <h2>About <span class="primary">me</span> <span class="title-bg">About</span></h2>
-                                    <p>                                    <p>Software Developer from South Africa. I focus on creating beautiful user interfaces to improve user experience. I love building beautiful and functional websites and web applications.</p></p>
+                                    <p>                                    <p>Software Developer from South Africa. I focus on creating beautiful user interfaces to improve user experience. I love building beautiful and functional websites and web applications. I also love</p></p>
                                 </div>
                             </div>
 
