--- a/about.html
+++ b/about.html
@@ -128,8 +128,8 @@
                         <div class="container">
                             <div class="flex flex-middle space-between">
                                 <span class="prev-page"><a href="welcome.html" class="link">&larr; Prev Page</a></span>
-                                <span class="copyright hidden-xs">Copyright &copy; 2016 Phantom, All Rights Reserved.</span>
-                                <span class="next-page"><a href="services.html" class="link">Next Page &rarr;</a></span>
+                                <span class="copyright hidden-xs">Copyright &copy; 2022 Moleseng, All Rights Reserved.</span>
+                                <span class="next-page"><a href="works.html" class="link">Next Page &rarr;</a></span>
                             </div>
                         </div>
                         <!-- /.page-nav -->
