--- a/contact.html
+++ b/contact.html
@@ -173,8 +173,8 @@
                     <nav class="page-nav clear">
                         <div class="container">
                             <div class="flex flex-middle space-between">
-                                <span class="prev-page"><a href="testimonials.html" class="link">&larr; Prev Page</a></span>
-                                <span class="copyright hidden-xs">Copyright &copy; 2016 Phantom, All Rights Reserved.</span>
+                                <span class="prev-page"><a href="resume.html" class="link">&larr; Prev Page</a></span>
+                                <span class="copyright hidden-xs">Copyright &copy; 2022 Moleseng, All Rights Reserved.</span>
                             </div>
                         </div>
                         <!-- /.page-nav -->
